[package]
name = "rscap"
rust-version = "1.65" # GATs stabilized in this version; required for `pkts`
version = "0.1.0"
edition = "2021"

[features]
default = ["std"]
std = ["alloc"]
alloc = []

[dependencies]
libc = { version = "0.2", path = "../libc-packet/libc" }
pkts = { version = "0.1", path = "pkts" }
