[package]
name = "pkts-macros"
description = "procedural macros for deriving `pkts` library traits"
authors = ["Nathaniel Bennett <me[at]nathanielbennett[dotcom]>"]
license = "MIT OR Apache-2.0"
version = "0.1.3"
edition = "2021"
repository = "https://github.com/pkts-rs/rscap"

[lib]
proc-macro = true

[features]
custom_layer_selection = []

[dependencies]
syn = { version = "1.0", features = ["derive"] }
quote = "1.0"
