[package]
name = "pkts"
authors = ["Nathaniel Bennett <me[at]nathanielbennett[dotcom]>"]
description = "packet crafting for network protocols"
rust-version = "1.65" # GATs stabilized in this version; required for `Sequence` types
license = "GPL-2.0-only"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/pkts-rs/rscap"

[features]
default = ["std", "custom_layer_selection"]
std = ["alloc"]
alloc = []
custom_layer_selection = ["pkts-macros/custom_layer_selection"]

[dependencies]
pkts-macros = { path = "../pkts-macros", version = "0.1.0" }
