[package]
name = "pkts"
authors = ["Nathaniel Bennett <me[at]nathanielbennett[dotcom]>"]
description = "tools for building, inspecting and modifying network protocol packets"
rust-version = "1.65" # GATs stabilized in this version; required for `Sequence` types
license = "MIT OR Apache-2.0"
version = "0.1.3"
edition = "2021"
repository = "https://github.com/pkts-rs/rscap"

[features]
default = ["std", "custom_layer_selection", "error_string"]
std = ["alloc"]
alloc = []
error_string = []
custom_layer_selection = ["pkts-macros/custom_layer_selection"]

[dependencies]
bitflags = { version = "2.6" }
pkts-macros = { path = "../pkts-macros", version = "0.1.3" }
pkts-common = { path = "../pkts-common", version = "0.1.0" }
